--- a/style.css
+++ b/style.css
@@ -17,3 +17,55 @@
     --h2-font: 3rem;
     --p-font: 1.1rem;
 }
+body{
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
+header{
+    position: fixed;
+    width: 100%;    
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: transparent;
+    padding: 22px 15%;
+    border-bottom: 1px solid transparent;
+    transition: all .45s ease;
+}
+.logo{
+    color: var(--text-color);
+    font-weight: 700;
+    font: size 35px;
+    letter-spacing: 1px;
+}
+span{
+    color: var(--main-color);
+}
+.navlist {
+    display:flex;
+}
+.navlist a{
+color: var(--second-color);
+font-size: 17px;
+font-weight: 500;   
+margin: 0 25px;
+transition: all .45s ease;
+}
+.navlist a:hover{
+    color: var(--main-color);
+}
+
+.navlist a.active{
+    color: var(--main-color);
+}
+#manu-icon {
+    font-size: 35px;
+    color: var(--text-color);
+    z-index: 10001; 
+    cursor: pointer;
+    margin-left: 25px;
+    display:none;
+}
