--- a/style.css
+++ b/style.css
@@ -69,3 +69,15 @@ transition: all .45s ease;
     margin-left: 25px;
     display:none;
 }
+section{
+    padding: 160px 15% 120px;
+}
+.home{
+    position: relative;
+    height: 100vh;  
+    width: 100%;
+    background-image: url(../Personal-Portfolio-/pg4.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
