backgroung image bug fixed

--- a/style.css
+++ b/style.css
@@ -76,8 +76,28 @@ section{
     position: relative;
     height: 100vh;  
     width: 100%;
-    background-image: url(../Personal-Portfolio-/pg4.jpg);
+    background-image: url(./pg4.jpg);
     background-size: cover;
     background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
+.slide{
+    margin-bottom: 20px;
+}
+.one{
+    display: inline-block;
+    margin-right: 15px;
+    height: 32px;
+    padding: 0 15px;
+    line-height: 32px;
+    font-size: 20px;
+    font-weight: 500;
+    border-radius:5px;
+    background-color: var(--main-color);
+    background:var(--main-color);
+    color: var(--text-color);
+}
+
 
