--- a/style.css
+++ b/style.css
@@ -435,5 +435,103 @@ color: var(--main-color);
     align-items: center;
     justify-content: space-between;
     gap: 2rem;
-    
+    background: var(--bg-color);
+}
+
+.last-text p {
+    color: var(--second-color);
+    font-size:14px;
+}
+
+.top i{
+    padding: 10px;
+    border-radius: 8px;
+    font-size: 15px;
+    color: var(--text-color);
+    background: var(--main-color);
+}
+
+@media (min-width: 1480px){
+    header {
+    padding: 12px 2.5%;
+    transition: .1s;
+}
+    header.sticky{ 
+        padding: 10px 2.5%;
+        transition: .1s;
+    }
+    section{
+        padding: 110px 3% 60px;
+    }
+    .end{
+        padding: 15px 3%;
+    }
+}
+
+@media (min-width: 1100px){
+    :root{
+        --big-font: 4rem;
+        --h2-font: 2.5rem;
+        --p-font: 1rem;
+        transition: .1s;
+    }
+    .home-text h3{
+        font-size: 2.5rem;
+    }
+    .home{
+        height: 87vh;
+    }
+}
+
+
+@media (max-width: 920px){
+    .about{
+        grid-template-columns: 1fr;
+    }
+   .about-img{
+    text-align: center;
+    order: 2;
+   } 
+   .about-img img{
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+   }
+   .contact{
+    grid-template-columns: 1fr;
+   }
+}
+
+@media (max-width: 840px){
+    #menu-icon{
+        display: block;
+    }
+    .navlist{
+        position: absolute;
+        top: -1000px;
+        right: 0;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        background: var(--bg-color);
+        text-align: left;
+        transition: all .45s ease;
+    }
+    .navlist a{
+        display: block;
+        margin: 17px;
+        font-size: 20px;
+        transition: all .45s ease;
+        color: var(--main-color);
+    }
+    .navlist a:hover{
+        color: var(--main-color);
+    }
+    .navlist a.active{
+        color: var(--text-color);
+    }
+    .navlist.open{
+        top: 100%;
+
+    }
 }
