--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ header.sticky {
 }
 .services-content{
     display:grid;
-   grid-template-columns: repeat(auto-fit, minmax(300px, auto)); 
+   grid-template-columns: repeat(auto-fit, minmax(250px, auto)); 
    align-items: center;
    gap:2.5rem ;
    margin-top: 5rem;
@@ -268,6 +268,7 @@ header.sticky {
     padding: 8px 18px;
     background: #333333;
     color: var(--second-color);
+    font-size: 14px;
     font-weight: 500;
     border-radius: 8px; 
     transition: all .45s ease ;
@@ -278,10 +279,10 @@ header.sticky {
     color: var(--text-color);
 }
 .box:hover{
-    transform: translateY(-10px);
+    transform: translateY(-8px);
     cursor: pointer;
 }
-.Portfolio-content{
+.portfolio-content{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, auto));
     align-items: center;
@@ -302,8 +303,9 @@ header.sticky {
 }
 .layer{
     width: 100%;
-    height: 100%;
+    height: 0;
     background: linear-gradient(rgba(0,0,0,0.1), #ff004f);
+    position: absolute;
     border-radius: 8px;
     left: 0;
     bottom: 0;
